# melatonin_perfetto

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: package_config.cmake
melatonin_perfetto/: melatonin_perfetto.cpp  melatonin_perfetto.h
scripts/: RunTests.py
tests/: CMakeLists.txt
tests/AddSubdirectory/: AddTests.cmake  CMakeLists.txt  main.cpp
tests/DumpFiles/: CMakeLists.txt  main.cpp
tests/FindPackage/: AddTests.cmake  CMakeLists.txt
tests/MissingJUCE/: AddTests.cmake  CMakeLists.txt
tests/PerfettoValue/: CMakeLists.txt  should_be_off.cpp  should_be_on.cpp
